--- a/src/scss/serenity.scss
+++ b/src/scss/serenity.scss
@@ -32,6 +32,7 @@
 @import "blocks/button";
 @import "blocks/form/form";
 @import "blocks/alert";
+@import "blocks/dropdown";
 @import "blocks/top-navigation";
 
 // Visibility Utils
