--- a/src/scss/utils/_sizes.scss
+++ b/src/scss/utils/_sizes.scss
@@ -7,8 +7,10 @@
 // size-xx (xx stand for the desired size in pixel)
 // ---------------------
 $size-100: 6.25rem;
+$size-80: 5rem;
 $size-70: 4.375rem;
 $size-56: 3.5rem;
+$size-50: 3.125rem;
 $size-48: 3rem;
 $size-44: 2.75rem;
 $size-40: 2.5rem;
@@ -36,3 +38,4 @@ $size-6: .375em;
 $size-5: .315rem;
 $size-4: .25rem;
 $size-2: .125rem;
+$size-1: .0625rem;
